feat: add verify,reset api
