# apps/auth-service/src/routes/auth.routes.ts
@@ -1,5 +1,5 @@
 import express, {Router} from 'express';
-import { userLogin, userRegister,  verifyUserRegisteration} from '../controller/auth.controller';
+import { forgotPassword, userLogin, userRegister,  verifyUserRegisteration,verifyForgotPasswordOtp,resetPassword} from '../controller/auth.controller';
 
 
 const autRrouter: Router = express.Router();
@@ -9,6 +9,8 @@ const autRrouter: Router = express.Router();
 autRrouter.post('/user-register', userRegister);
 autRrouter.post('/user-verify', verifyUserRegisteration); 
 autRrouter.post('/user-login', userLogin);
-
+autRrouter.post('/user-forgot', forgotPassword);
+autRrouter.post('/user-forgot-verify', verifyForgotPasswordOtp);
+autRrouter.post('/user-reset-password', resetPassword);
 
 export default autRrouter;
